genericexport10112022/genericexport10112022-output/genericexport10112022-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "360"
  name: genericexport10112022-service
  namespace: validation-flow
spec:
  selector:
    app.kubernetes.io/instance: validation-flow-genericexport10112022-instance
  ports:
    - name: genericexport10112022-9090
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: genericexport10112022-8001
      protocol: TCP
      port: 8001
      targetPort: 8001
