genericexport10112022/genericexport10112022-output/genericexport10112022-8001-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "371"
  name: genericexport10112022-8001-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: genericexport10112022-service
    weight: 100
  port:
    targetPort: genericexport10112022-8001
